--- a/src/components/Events/Events.css
+++ b/src/components/Events/Events.css
@@ -90,7 +90,7 @@
     display: inline-block;
     padding: 10px 20px;
     background-color: #28a745;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
     border-radius: 4px;
     text-decoration: none;
